# CruciSolver

./: README.md  pyproject.toml
scripts/: eval_seq2seq.py  prepare_data.py  run_bpsolver.py  tfidf_baseline.py  train_biencoder.py  train_seq2seq.py
slurm/: 01_prepare_data.sh  02_tfidf_baseline.sh  03_train_byt5.sh  04_train_biencoder.sh  05_solve_test.sh
