[project]
name = "crucisolver"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.5",
    "transformers>=4.44",
    "torch>=2.4",
    "datasets>=2.20",
    "accelerate>=0.33",
    "numpy>=2.0",
    "sentencepiece>=0.2",
    "protobuf>=5.0",
    "wandb>=0.17",
    "puzpy>=0.6",
]
